# homework-helper

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  email.py  graph.py  logging.py  main.py  schemas.py  tools.py
backend/app/routes/: __init__.py  auth.py  chat.py  debug.py  health.py  subjects_chats.py  tools.py
data/: purge-and-seed.sql
frontend/: Dockerfile  app.py  auth.py  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.streamlit/: config.toml
frontend/pages/: 1_Chat.py  2_Debug.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Sidebar.tsx  theme-provider.tsx
frontend/src/components/ui/: accordion.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  DebugPage.tsx  LoginPage.tsx
plan/: 01-be-db-layer-refactor.md  02-be-core-services-refactor.md  03-be-routes-refactor.md  04-be-schema-cleanup.md  05-fe-refactor.md  06-be-test-infrastructure.md  07-be-uat-tests.md  ori-prompt.md
