[project]
name = "backend"
version = "0.1.0"
description = "homework-helper backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.8",
    "httpx==0.28.1",
    "langchain-core==0.3.86",
    "langchain-openai==0.3.35",
    "langgraph==0.6.11",
    "pydantic==2.13.4",
    "pydantic-settings>=2.11.0",
    "PyJWT==2.10.1",
    "uvicorn==0.39.0",
]
